--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -24,56 +24,60 @@ catalogs: Kataloge
 allCatalog: Alle kataloge
 catalog.messier: Messierobjekte
 catalog.ngc: New General Catalog
-catalog.ic: Index-Katalog
+catalog.ic: Index
 catalog.ldn: Lynds' Catalogue of Dark Nebulae
 catalog.lbn: Lynds' Catalogue of Bright Nebulae
-catalog.sh: Sharpless Katalog
-catalog.cr: Collinder Katalog
+catalog.sh: Sharpless
+catalog.cr: Collinder
 catalog.sto : Stock open clusters
-catalog.rcw: RCW-Katalog
+catalog.rcw: RCW
 catalog.agc: Abell catalog of galaxies clusters
 catalog.abl: Abell Catalog of Planetary Nebulae
 catalog.ugc: Uppsala General Katalog
-catalog.dodz: Dolidze-Dzimselejvil Katalog
-catalog.pgc: Catalogue of Principal Galaxies
-catalog.cld: Caldwell-Katalog
+catalog.dodz: Dolidze-Dzimselejvil
+catalog.pgc: Catalog of Principal Galaxies
+catalog.cld: Caldwell
 catalog.unassigned: Unassigned
-catalog.ddo: David Dunlap Observatory Katalog
-catalog.vdb: Van den Bergh Katalog
-catalog.lyn: Lynga Katalog
-catalog.pis: Pismis Katalog
-catalog.mkw: Minkowski Katalog
-catalog.mzl: Menzel Katalog
-catalog.biu: Biurakan Katalog
-catalog.boc: Bochum Katalog
-catalog.mel: Melotte Katalog
-catalog.ber: Berkeley Katalog
-catalog.cz: Czernick Katalog
-catalog.rsl: Roslung Katalog
-catalog.bsl: Basel Katalog
-catalog.ced: Ced katalog
-catalog.doc: Do katalog
-catalog.eso: ESO catalog
-catalog.haf: Haffner catalog
-catalog.har: Haro catalog
-catalog.hen: Henize catalog
-catalog.hvd: Harvard catalog
-catalog.hic: Hickson catalog
-catalog.hod: Hodge catalog
-catalog.hog: Hogg catalog
-catalog.huc: Humason catalog
-catalog.kin: King catalog
-catalog.lat: Latysev catalog
-catalog.lod: Loden catalog
-catalog.mar: Markarian catalog
-catalog.mrk: MRK catalog
-catalog.ocl: OCL catalog
-catalog.pal: Palomar catalog
-catalog.pmb: Peimbert catalog
-catalog.per: Perek catalog
-catalog.ru: Ruprecht catalog
-catalog.ter: Terzan catalog
-catalog.vy: Vyssotsky catalog
+catalog.ddo: David Dunlap Observatory
+catalog.vdb: Van den Bergh
+catalog.lyn: Lynga
+catalog.pis: Pismis
+catalog.mkw: Minkowski
+catalog.mzl: Menzel
+catalog.biu: Biurakan
+catalog.boc: Bochum
+catalog.mel: Melotte
+catalog.ber: Berkeley
+catalog.cz: Czernick
+catalog.rsl: Roslung
+catalog.arp: Arp
+catalog.b: B
+catalog.bsl: Basel
+catalog.ced: Cederblad
+catalog.doc: Do
+catalog.eso: ESO
+catalog.haf: Haffner
+catalog.har: Haro
+catalog.hen: Henize
+catalog.hvd: Harvard
+catalog.hic: Hickson
+catalog.hod: Hodge
+catalog.hog: Hogg
+catalog.huc: Humason
+catalog.k: K
+catalog.kin: King
+catalog.lat: Latysev
+catalog.lod: Loden
+catalog.mar: Markarian
+catalog.may: Mayer
+catalog.mrk: MRK
+catalog.ocl: OCL
+catalog.pal: Palomar
+catalog.pmb: Peimbert
+catalog.per: Perek
+catalog.ru: Ruprecht
+catalog.ter: Terzan
+catalog.vy: Vyssotsky
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
