--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -22,59 +22,63 @@ dayMode: Night mode OFF
 catalog: Catalog
 catalogs: Catalogs
 allCatalog: All catalogs
-catalog.messier: Messier's catalog
+catalog.messier: Messier
 catalog.ngc: New General Catalog
 catalog.ic: Index Catalog
-catalog.ldn: Lynds' Catalogue of Dark Nebulae
-catalog.lbn: Lynds' Catalogue of Bright Nebulae
-catalog.sh: Sharpless catalog
-catalog.cr: Collinder catalog
+catalog.ldn: Lynds of Dark Nebulae
+catalog.lbn: Lynds of Bright Nebulae
+catalog.sh: Sharpless
+catalog.cr: Collinder
 catalog.sto : Stock open clusters
-catalog.rcw: RCW Catalog
+catalog.rcw: RCW
 catalog.agc: Abell catalog of galaxies clusters
 catalog.abl: Abell Catalog of Planetary Nebulae
-catalog.ugc: Uppsala General Catalog
-catalog.dodz: Dolidze-Dzimselejvil catalog
+catalog.ugc: UGC Uppsala General Catalog
+catalog.dodz: Dolidze-Dzimselejvil
 catalog.pgc: Catalogue of Principal Galaxies
-catalog.cld: Caldwell catalog
+catalog.cld: Caldwell
 catalog.unassigned: Unassigned
-catalog.ddo: David Dunlap Observatory Catalogue
-catalog.vdb: Catalog van den Bergh
-catalog.lyn: Lynga catalog
-catalog.pis: Pismis catalog
-catalog.mkw: Minkowski catalog
-catalog.mzl: Menzel catalog
-catalog.biu: Biurakan catalog
-catalog.boc: Bochum catalog
-catalog.mel: Melotte catalog
-catalog.ber: Berkeley catalog
-catalog.cz: Czernick catalog
-catalog.rsl: Roslung catalog
-catalog.b: B catalog
-catalog.bsl: Basel catalog
-catalog.ced: Ced catalog
-catalog.doc: Do catalog
-catalog.eso: ESO catalog
-catalog.haf: Haffner catalog
-catalog.har: Haro catalog
-catalog.hen: Henize catalog
-catalog.hvd: Harvard catalog
-catalog.hic: Hickson catalog
-catalog.hod: Hodge catalog
-catalog.hog: Hogg catalog
-catalog.huc: Humason catalog
-catalog.kin: King catalog
-catalog.lat: Latysev catalog
-catalog.lod: Loden catalog
-catalog.mar: Markarian catalog
-catalog.mrk: MRK catalog
-catalog.ocl: OCL catalog
-catalog.pal: Palomar catalog
-catalog.pmb: Peimbert catalog
+catalog.ddo: David Dunlap Observatory
+catalog.vdb: Van den Bergh
+catalog.lyn: Lynga
+catalog.pis: Pismis
+catalog.mkw: Minkowski
+catalog.mzl: Menzel
+catalog.biu: Biurakan
+catalog.boc: Bochum
+catalog.mel: Melotte
+catalog.ber: Berkeley
+catalog.cz: Czernick
+catalog.rsl: Roslung
+catalog.arp: Arp
+catalog.b: B
+catalog.bsl: Basel
+catalog.ced: Cederblad
+catalog.doc: Do
+catalog.eso: ESO
+catalog.haf: Haffner
+catalog.har: Haro
+catalog.hen: Henize
+catalog.hvd: Harvard
+catalog.hic: Hickson
+catalog.hod: Hodge
+catalog.hog: Hogg
+catalog.huc: Humason
+catalog.k: K
+catalog.kin: King
+catalog.lat: Latysev
+catalog.lod: Loden
+catalog.may: Mayer
+catalog.mar: Markarian
+catalog.mrk: MRK
+catalog.ocl: OCL
+catalog.pal: Pal - Palomar
+catalog.pmb: Peimbert
 catalog.per: Perek catalog
-catalog.ru: Ruprecht catalog
-catalog.ter: Terzan catalog
-catalog.vy: Vyssotsky catalog
+catalog.ru: Ruprecht
+catalog.sha: Shapley
+catalog.ter: Terzan
+catalog.vy: Vyssotsky
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc: ""
 description.ic: ""
