--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -51,6 +51,7 @@ catalog.ber: Berkeley
 catalog.cz: Czernick
 catalog.rsl: Roslung
 catalog.arp: Arp
+catalog.am: Arp-Madore
 catalog.b: B
 catalog.bsl: Basel
 catalog.ced: Cederblad
