--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -69,6 +69,7 @@ catalog.k: K
 catalog.kin: King
 catalog.lat: Latysev
 catalog.lod: Loden
+catalog.lon: Longmore
 catalog.may: Mayer
 catalog.mar: Markarian
 catalog.mrk: MRK
