--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -69,6 +69,7 @@ catalog.k: K
 catalog.kin: King catalog
 catalog.lat: Latysev catalog
 catalog.lod: Loden catalog
+catalog.lon: Longmore catalog
 catalog.mar: Markarian catalog
 catalog.may: Mayer
 catalog.mrk: MRK catalog
