--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -57,6 +57,7 @@ catalog.bsl: Basel
 catalog.ced: Cederblad
 catalog.doc: Do
 catalog.eso: ESO
+catalog.fle: Fleming
 catalog.haf: Haffner
 catalog.har: Haro
 catalog.hen: Henize
@@ -79,6 +80,7 @@ catalog.pmb: Peimbert
 catalog.per: Perek catalog
 catalog.ru: Ruprecht
 catalog.sha: Shapley
+catalog.sl: Sandqvist-Lindroos
 catalog.ter: Terzan
 catalog.vy: Vyssotsky
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
