--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -57,6 +57,7 @@ catalog.bsl: Basel
 catalog.ced: Cederblad
 catalog.doc: Do catalog
 catalog.eso: ESO catalog
+catalog.fle: Fleming
 catalog.haf: Haffner catalog
 catalog.har: Haro catalog
 catalog.hen: Henize catalog
@@ -78,6 +79,8 @@ catalog.pal: Palomar catalog
 catalog.pmb: Peimbert catalog
 catalog.per: Perek catalog
 catalog.ru: Ruprecht catalog
+catalog.sha: Shapley
+catalog.sl: Sandqvist-Lindroos
 catalog.ter: Terzan catalog
 catalog.vy: Vyssotsky catalog
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
