--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -22,67 +22,67 @@ dayMode: Night mode OFF
 catalog: Catalogar
 catalogs: Catálogos
 allCatalog: Todos los catálogos
+catalog.unassigned: No asignado
 catalog.messier: Catálogo de Messier
 catalog.ngc: New General Catalog
 catalog.ic: Index Catalog
-catalog.ldn: Lynds' Catalogue of Dark Nebulae
-catalog.lbn: Lynds' Catalogue of Bright Nebulae
-catalog.sh: Sharpless catalog
-catalog.cr: Collinder catalog
-catalog.sto : Stock open clusters
-catalog.rcw: RCW Catalog
+catalog.sh: Sharpless
 catalog.agc: Abell catalog of galaxies clusters
 catalog.abl: Abell Catalog of Planetary Nebulae
-catalog.ugc: Uppsala General Catalog
-catalog.dodz: Dolidze-Dzimselejvil catalog
-catalog.pgc: Catalogue of Principal Galaxies
-catalog.cld: Catálogo Caldwell
-catalog.unassigned: Unassigned
-catalog.ddo: David Dunlap Observatory Catalogue
-catalog.vdb: Catalog van den Bergh
-catalog.lyn: Lynga catalog
-catalog.pis: Pismis catalog
-catalog.mkw: Minkowski catalog
-catalog.mzl: Menzel catalog
-catalog.biu: Biurakan catalog
-catalog.boc: Bochum catalog
-catalog.mel: Melotte catalog
-catalog.ber: Berkeley catalog
-catalog.cz: Czernick catalog
-catalog.rsl: Roslung
+catalog.ldn: Lynds of Dark Nebulae
+catalog.lbn: Lynds of Bright Nebulae
 catalog.arp: Arp
 catalog.am: Arp-Madore
 catalog.b: B
 catalog.bsl: Basel
+catalog.ber: Berkeley
+catalog.biu: Biurakan
+catalog.boc: Bochum
+catalog.cr: Collinder
+catalog.cld: Caldwell
 catalog.ced: Cederblad
-catalog.doc: Do catalog
-catalog.eso: ESO catalog
+catalog.cz: Czernick
+catalog.ddo: David Dunlap Observatory
+catalog.doc: Do
+catalog.dodz: Dolidze-Dzimselejvil
+catalog.eso: ESO
 catalog.fle: Fleming
-catalog.haf: Haffner catalog
-catalog.har: Haro catalog
-catalog.hen: Henize catalog
-catalog.hvd: Harvard catalog
-catalog.hic: Hickson catalog
-catalog.hod: Hodge catalog
-catalog.hog: Hogg catalog
-catalog.huc: Humason catalog
+catalog.haf: Haffner
+catalog.har: Haro
+catalog.hen: Henize
+catalog.hvd: Harvard
+catalog.hic: Hickson
+catalog.hod: Hodge
+catalog.hog: Hogg
+catalog.huc: Humason
 catalog.k: K
-catalog.kin: King catalog
-catalog.lat: Latysev catalog
-catalog.lod: Loden catalog
-catalog.lon: Longmore catalog
-catalog.mar: Markarian catalog
+catalog.kin: King
+catalog.lat: Latysev
+catalog.lod: Loden
+catalog.lon: Longmore
+catalog.lyn: Lynga
+catalog.mar: Markarian
 catalog.may: Mayer
-catalog.mrk: MRK catalog
-catalog.ocl: OCL catalog
-catalog.pal: Palomar catalog
-catalog.pmb: Peimbert catalog
+catalog.mel: Melotte
+catalog.mkw: Minkowski
+catalog.mzl: Menzel
+catalog.mrk: MRK
+catalog.ocl: OCL
+catalog.pal: Pal - Palomar
+catalog.pmb: Peimbert
 catalog.per: Perek catalog
-catalog.ru: Ruprecht catalog
+catalog.pgc: Catalogue of Principal Galaxies
+catalog.pis: Pismis
+catalog.rcw: RCW
+catalog.rsl: Roslung
+catalog.ru: Ruprecht
 catalog.sha: Shapley
 catalog.sl: Sandqvist-Lindroos
-catalog.ter: Terzan catalog
-catalog.vy: Vyssotsky catalog
+catalog.sto : Stock open clusters
+catalog.ter: Terzan
+catalog.ugc: Uppsala General Catalog
+catalog.vdb: Van den Bergh
+catalog.vy: Vyssotsky
 description.messier: The Messier objects are a set of 110 astronomical objects catalogued by the French astronomer Charles Messier in his "Catalogue des Nébuleuses et des Amas d'Étoiles" ("Catalogue of Nebulae and Star Clusters").
 description.ngc:
 description.ic:
