--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -47,6 +47,7 @@ catalog.doc: Do
 catalog.dodz: Dolidze-Dzimselejvil
 catalog.eso: ESO
 catalog.fle: Fleming
+catalog.gum: Gum
 catalog.haf: Haffner
 catalog.har: Haro
 catalog.hen: Henize
