--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -56,6 +56,7 @@ catalog.hvd: Harvard
 catalog.hic: Hickson
 catalog.hod: Hodge
 catalog.hog: Hogg
+catalog.hol: Holmberg
 catalog.huc: Humason
 catalog.k: K
 catalog.kin: King
