Add data in draco constellation

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -34,6 +34,7 @@ catalog.abl: Abell Catalog of Planetary Nebulae
 catalog.arp: Arp
 catalog.am: Arp-Madore
 catalog.b: B
+catalog.bar: Barkhatova
 catalog.bsl: Basel
 catalog.ber: Berkeley
 catalog.biu: Biurakan
