--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -34,6 +34,7 @@ catalog.lbn: Catalogue de Lynd des nébuleuses brillantes
 catalog.arp: Arp
 catalog.am: Arp-Madore
 catalog.b: B
+catalog.bar: Barkhatova
 catalog.bsl: Basel
 catalog.ber: Berkeley
 catalog.biu: Biurakan
