--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -34,6 +34,7 @@ catalog.lbn: Lynds of Bright Nebulae
 catalog.arp: Arp
 catalog.am: Arp-Madore
 catalog.b: B
+catalog.bar: Barkhatova
 catalog.bsl: Basel
 catalog.ber: Berkeley
 catalog.biu: Biurakan
