--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -80,6 +80,7 @@ catalog.pis: Pismis
 catalog.rcw: RCW
 catalog.rsl: Roslung
 catalog.ru: Ruprecht
+catalog.sast: Sanduleak-Stephenson
 catalog.sha: Shapley
 catalog.sl: Sandqvist-Lindroos
 catalog.sto : Stock open clusters
