--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -82,6 +82,7 @@ catalog.rsl: Roslung
 catalog.ru: Ruprecht
 catalog.sast: Sanduleak-Stephenson
 catalog.sha: Shapley
+catalog.shk: Shakhbazian
 catalog.sl: Sandqvist-Lindroos
 catalog.sto : Stock open clusters
 catalog.ter: Terzan
