Add data in constellation

--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -65,12 +65,11 @@ catalog.lat: Latysev
 catalog.lod: Loden
 catalog.lon: Longmore
 catalog.lyn: Lynga
-catalog.mar: Markarian
 catalog.may: Mayer
 catalog.mel: Melotte
 catalog.mkw: Minkowski
 catalog.mzl: Menzel
-catalog.mrk: MRK
+catalog.mrk: Markarian
 catalog.ocl: OCL
 catalog.pal: Pal - Palomar
 catalog.pmb: Peimbert
