--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -31,6 +31,7 @@ catalog.agc: Abell catalog of galaxies clusters
 catalog.abl: Abell Catalog of Planetary Nebulae
 catalog.ldn: Lynds of Dark Nebulae
 catalog.lbn: Lynds of Bright Nebulae
+catalog.3c: Third Cambridge Catalogue of Radio Sources
 catalog.arp: Arp
 catalog.am: Arp-Madore
 catalog.b: B
@@ -174,6 +175,7 @@ type.pos: Asterismo
 type.sc: Aglomerado estelar
 type.vn:
 type.ga: Galaxie à anneau
+type.q: Quasar
 # Constellations
 const.unassigned: unassigned
 constellation.and: Andrômeda
