--- a/translations/messages.pt.yaml
+++ b/translations/messages.pt.yaml
@@ -1,5 +1,5 @@
 # Layout
-dso: The Otter In Space
+dso: Astro-Otter
 dso_tr: Objetos do céu profundo
 menu.homepage: Página incial
 selectLang: Línguas
