--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -123,7 +123,7 @@ es: Spanish
 de: German
 # Homepage
 homepage.message: Discover beauties and mysteries of the universe
-homepage.desc: "%sitename% is a celestial atlas containing more than 9000 deep sky objects, grouped by different catalog or type of object. You can search, find and discover the beauty and mysteries of our universe on our site."
+homepage.desc: "%sitename% is a celestial atlas containing more than 9000 deep sky objects, grouped by different catalog or type of object. Search, discover and marvel."
 home.search.placeholder: Search in catalogs...
 dayImage: Image of the day
 # View full
