--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -289,7 +289,7 @@ select:
 # Form contact
 contact.title: "Kontaktieren Sie uns"
 form.error.sending: "A problem has occurred, please try later"
-form.ok.sending: "Message sended"
+form.ok.sending: "Message sended. We will answer you as soon as possible."
 form.error.message: "Please fix errors below"
 form.api.success: "Registration OK. You will receive in your mailbox a bearer token for API."
 contact.form.firstname: "Firstname (*)"
