--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -122,7 +122,7 @@ pt_BR: Portuguese (Brazil)
 es: Spanish
 de: German
 # Homepage
-homepage.message: Discover beauties and mysteries of the universe
+homepage.message: Discover wonders and mysteries of the universe
 homepage.desc: "%sitename% is a celestial atlas containing more than 9000 deep sky objects, grouped by different catalog or type of object. Search, discover and marvel."
 home.search.placeholder: Search in catalogs...
 dayImage: Image of the day
