--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -121,7 +121,7 @@ pt_BR: Portugais (Brésil)
 es: Espagnol
 de: Allemand
 # Homepage
-homepage.message: Découvrez les beautés et les mystères de l'univers
+homepage.message: Découvrez les merveilles et mystères de l'univers
 homepage.desc: "%sitename% est un atlas céleste contenant plus de 9000 objets du ciel profond, regroupés par différents catalogue ou type d'objet. Cherchez, découvrez et émerveillez-vous."
 home.search.placeholder: Rechercher dans les catalogues...
 dayImage: L'image du jour
