Add new route for schedule observation

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -322,6 +322,8 @@ contactDesc:
 skymapDesc:
 # Form add observation
 addObservation: Add an observation
+addObservationDesc: Save your observations and add objects you've seen.
+scheduleObs: Schedule an observation
 form.ok.addDoc: Observation added, retrieve it <a href="%url%">here</a>.
 form.error.addDoc: Error adding document. Try again or contact admin.
 observation:
