--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -321,6 +321,8 @@ contactDesc:
 skymapDesc:
 # Form add observation
 addObservation: Fügen Sie eine Beobachtung hinzu
+addObservationDesc: Sauvegardez vos observations en ajoutant les objets que vous avez observé.
+scheduleObs: Schedule an observation
 form.ok.addDoc: Observation added, retrieve it <a href="%url%">here</a>.
 form.error.addDoc: Error adding document. Try again or contact admin.
 observation:
