--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -13,7 +13,7 @@ hem.su: Southern hemisphere
 about.us: About us
 skymap: SkyMap
 titleObservation: Observations
-listObservations: List
+listObservations: Observations list
 locationObservation: Observations location
 openMenu: Open menu
 switchLang: Switch language
