--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -13,7 +13,7 @@ hem.su: Hémisphère sud
 about.us: À propos
 skymap: Carte du ciel
 titleObservation: Observations
-listObservations: Liste
+listObservations: Liste des observations
 locationObservation: Localisation des observations
 openMenu: Ouverture menu
 switchLang: Changer de langue
