--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -4,6 +4,7 @@ dso_tr: Objets du ciel profond
 menu.homepage: Accueil
 selectLang: Langues
 astrobin.message: This product uses the AstroBin API but is not endorsed or certified by AstroBin.
+astrobin.credit: &copy; Astrobin crédit
 error.message: Erreur %error%, peut-être êtes-vous tombé dans un trou noir :) ?
 more: Plus d'informations
 hem.all: Tous
