--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -4,6 +4,7 @@ dso_tr: Deep-sky objects
 menu.homepage: Página principal
 selectLang: Idiomas
 astrobin.message: This product uses the AstroBin API but is not endorsed or certified by AstroBin.
+astrobin.credit: &copy; Astrobin credit
 error.message: Error %error%, maybe you fall in a black hole :) ?
 more: Más información
 hem.all: All
